  + mqo_halt will clear the monitor of a process.
  + the suspend primitive will report an error if it attempts to suspend
    a process that is monitoring.

- ?/??/????, Phase Three of the Module System
  + When compiling a module, the export
  + Added the eval procedure to core.
  + Added define-macro
  + Added super-type primitive.
  + Added base-type primitive.

- 2/08/2006, Queues Suspend and Resume on Empty
  * Extended the queue read method to suspend the reading process if the queue
    is empty.
  * Extended the queue write method to resume a blocked reading process if
    necessary.
  * Added a read method for reading from a process -- using its assigned
    output port.
  * Added a write method for writing to a process -- using its assigned
    input port.
  * il_traceback will display the first string in the error without escapes,
    and all subsequent values using show.
  * Added support for arithmetic comparisons with 1 or more arguments.
  * Removed <input-port> and <output-port> from the port class hierarchy in
    favor of using a more sophisticated <port> class.
  * Added logic to <port> reads to identify a closed port and mark them
    as closed when *eof* is returned by a port's read method.
  * Fixed stack contamination from closing a port.

- 2/08/2006, Clarification of Show and Write
  * Updated fakevm and mosc with hacks for Scheme environments to work around
    the differences in write, and the lack of display.
  * the suspend and pause primitives now properly clear their call frames off
    the return stack.
  * the read-desr primitive now properly clears its call frame off the return 
    stack if it blocks to monitor.
  * NO_MORE_ARGS no longer crashes the virtual machine when the user supplies
    too many arguments to a primitive.
  * mqo_list_ref now signals an error when index is greater than length.
  * mqo_show_string now wraps the supplied string in quotes.