@@ -13,7 +13,7 @@
 ; along with this library; if not, write to the Free Software Foundation, 
 ; Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
 
-(define-class <connection>
+(define-class connection
               <port>
               (make-connection descr)
               connection?
